--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -44,8 +44,10 @@
       </tbody>
     </table>
   </div>
-  <br><br>
 </div>
 <div *ngIf=noCart>
+  <div class="text-center">
+    <h1 class="italics">Your cart is empty</h1>
+  </div>
   <img src="assets/cartempty.svg" class="img-responsive" />
 </div>
