header UI updated, added cart icon with cart quantity

--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -51,11 +51,12 @@
         </li>
         <div *ngIf=curUser style="padding-top:10px;">
           <li class="nav-item">
-            <a class="nav-link " (click)="wishlistRoute()"  href="#">Wishlist</a>
+            <a class="nav-link " (click)="wishlistRoute()" href="#">Wishlist</a>
           </li>
         </div>
         <li class="nav-item">
-          <a class="nav-link" (click)="cartRoute()">Cart</a>
+          <a class="nav-link" (click)="cartRoute()" style="cursor:pointer"><i class="fa fa-cart-plus"><span class="badge">{{cartLength}}</span></i>
+            Cart</a>
         </li>
       </ul>
     </div>
