--- a/GoDeliverFrontEnd/src/app/header/header.component.css
+++ b/GoDeliverFrontEnd/src/app/header/header.component.css
@@ -20,3 +20,7 @@ nav .navbar-nav li a {
 .navbar-toggler-icon {
   background-image: url("../../assets/hamburg.png");
 }
+._svgicon {
+  margin-top:10px;
+  color:black;
+}
