--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
 
-      <ul class="navbar-nav" style="padding-right: 70px; padding-left:100px">
+      <ul class="navbar-nav">
         <div *ngIf=noUser style="padding-top: 10px;">
           <li class="nav-item">
             <a class="nav-link" routerLink="/login" href="#">Login</a>
