--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
-<div *ngIf='carts'>
-  <div class="container">
+<div *ngIf="carts.length!=0;else test">
+  <div class=" container">
     <table class="table table-striped table-hover ">
       <thead>
         <tr>
@@ -45,9 +45,15 @@
     </table>
   </div>
 </div>
-<div *ngIf=noCart>
+<ng-template #test>
   <div class="text-center">
     <h1 class="italics">Your cart is empty</h1>
   </div>
   <img src="assets/cartempty.svg" class="img-responsive" />
-</div>
+</ng-template>
+<!-- <div *ngIf=noCart>
+  <div class="text-center">
+    <h1 class="italics">Your cart is empty</h1>
+  </div>
+  <img src="assets/cartempty.svg" class="img-responsive" />
+</div> -->
