--- a/GoDeliverFrontEnd/src/app/cards/cards.component.html
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.html
@@ -22,7 +22,7 @@
       <div *ngIf=like>
         <div class="fav">
           <mat-icon class="example-icon">
-            <a (click)="addToWishlist(book)"><img src={{heartImage}}> </a>
+            <a (click)="addToWishlist(book)"><img src="assets/red.png"> </a>
           </mat-icon>
         </div>
       </div>
