--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -51,7 +51,7 @@
         </li>
         <div *ngIf=curUser style="padding-top:10px;">
           <li class="nav-item">
-            <a class="nav-link " (click)="wishlistRoute()" href="#">Wishlist</a>
+            <a class="nav-link " (click)="wishlistRoute()">Wishlist</a>
           </li>
         </div>
         <li class="nav-item">
