added route for admin

--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -8,7 +8,8 @@
         <form>
             <div class="row">
                 <div class="col-9">
-                    <input type="text" class="form-control" placeholder="Search your favourite books here" name="search" [(ngModel)]="search">
+                    <input type="text" class="form-control" placeholder="Search your favourite books here" name="search"
+                        [(ngModel)]="search">
                 </div>
                 <div class="col-3">
                     <button class="btn-block btn-info form-control" (click)="searchBooks()">Search</button>
@@ -59,7 +60,7 @@
 
             <div class="item">
                 <a routerLink="/cart">
-                    <img src="assets/img.jpg" alt="Chicago"  style="width:100%; height: 35%; max-height: 400px">
+                    <img src="assets/img.jpg" alt="Chicago" style="width:100%; height: 35%; max-height: 400px">
                     <div class="carousel-caption">
                         <h3>Top Rated Book</h3>
                         <p>Best rated books loved by all!</p>
