--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -24,6 +24,18 @@
           </li>
         </div>
 
+        <div *ngIf=admin style="padding-top: 10px;">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+              {{ adminName }}
+            </a>
+            <div class="dropdown-menu ">
+              <a class="dropdown-item " routerLink="/grafana">Grafana</a>
+              <a class="dropdown-item " routerLink="/prometheus">Prometheus</a>
+              <a class="dropdown-item " (click)="logout()">Logout</a>
+            </div>
+          </li>
+        </div>
 
         <div *ngIf=curUser style="padding-top: 10px;">
           <li class="nav-item dropdown">
