--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -48,7 +48,7 @@
         <div class="carousel-inner">
 
             <div class="item active">
-                <a routerLink="/login">
+                <a routerLink="/topselling">
                     <img src="assets/images.jpg" alt="Los Angeles" style="width:100%; height:35%;max-height: 400px">
                     <div class="carousel-caption">
                         <h3>Top Selling</h3>
@@ -59,7 +59,7 @@
 
 
             <div class="item">
-                <a routerLink="/cart">
+                <a routerLink="/toprated">
                     <img src="assets/img.jpg" alt="Chicago" style="width:100%; height: 35%; max-height: 400px">
                     <div class="carousel-caption">
                         <h3>Top Rated Book</h3>
@@ -69,11 +69,11 @@
             </div>
 
             <div class="item">
-                <a routerLink="/register">
+                <a routerLink="/allbooks">
                     <img src="assets/img1.png" alt="New York" style="width:100%;height: 35%; max-height: 400px">
                     <div class="carousel-caption">
-                        <h3>New York</h3>
-                        <p>We love the Big Apple!</p>
+                        <h3>All books</h3>
+                        <p>Have a look to all the books at once!</p>
                     </div>
                 </a>
             </div>
