made timeslots and payment  responsive

--- a/GoDeliverFrontEnd/src/app/payment/payment.component.html
+++ b/GoDeliverFrontEnd/src/app/payment/payment.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mb-4 ml-1" style="align-self:center">
 
-    <mat-card>
+    <mat-card style="margin:auto">
       <!-- <form #myForm="ngForm" (ngSubmit)="onSubmit()"> -->
       <h2 style="margin-left:20px">Payment Form</h2>
       <form #myForm="ngForm">
