--- a/GoDeliverFrontEnd/src/app/timeslots/timeslots.component.html
+++ b/GoDeliverFrontEnd/src/app/timeslots/timeslots.component.html
@@ -35,7 +35,7 @@
        </mat-card>
    </div>
    <div class="col-sm-4">
-       <mat-card style="height:320px;margin-top:10px;margin-left:20px;background-color: deepskyblue;border-radius:6px">
+       <mat-card class="order">
            <mat-card-title>
                <b>Order Details</b>
            </mat-card-title>
