able to do payment with total value without delivery charges

--- a/GoDeliverFrontEnd/src/app/payment/payment.component.html
+++ b/GoDeliverFrontEnd/src/app/payment/payment.component.html
@@ -43,7 +43,7 @@
         <button type="submit" [disabled]="!myForm.form.valid" appNoDblClick (click)="chargeCreditCard()" style="border-radius:8px;height:40px">Submit</button>
         <button (click)="refundCreditCard()" style="border-radius:8px;margin-left:20px;height:40px">Refund</button><br><br>
         <p style="color:green">{{msg}}</p>
-
+<p> {{sum}}</p>
 
       </form>
     </mat-card>
