--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
+<div class="component-body">
 <div class="container text-center">
   <form #myForm="ngForm" (ngSubmit)="onSubmit()">
     <mat-form-field class="example-full-width">
@@ -19,8 +20,8 @@
   </form>
 </div>
 <br>
-  <br>
-  <br>
+<br>
+<br>
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-6" style="background-color:lavender;">
@@ -32,18 +33,19 @@
       </div>
     </div>
 
-      <div class="col-sm-6" style="background-color:lavender;">
-        <div *ngIf=doughnutChartData>
-          <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"></canvas>
-        </div>
+    <div class="col-sm-6" style="background-color:lavender;">
+      <div *ngIf=doughnutChartData>
+        <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
+          (chartClick)="chartClicked($event)"></canvas>
       </div>
+    </div>
+
+    <div class="col-sm-6" style="background-color:lavender;">
+      <div *ngIf=doughnutChartData>
+        <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
+          [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+      </div>
+    </div>
   </div>
 </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+</div>
