--- a/GoDeliverFrontEnd/src/app/footer/footer.component.css
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.css
@@ -1,5 +1,11 @@
-  footer {
+.footer-component{
     position: relative;
     bottom: 0;
-    width:100%
+    width:100%;
   }
+.container-fluid{
+  padding: 0px !important;
+}
+.col-sm-12{
+  padding: 0px !important;
+}
