--- a/GoDeliverFrontEnd/src/app/footer/footer.component.html
+++ b/GoDeliverFrontEnd/src/app/footer/footer.component.html
@@ -1,62 +1,36 @@
-<!-- Footer Page-->
-
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-
-</head>
-
-<body>
-
-  <footer class="page-footer font-small footer-dark cyan darken-5 bg-dark text-light">
-
-
-    <!-- Grid row-->
-    <div class="row text-center">
-
-      <!-- Grid column -->
-      <div class="col-md-12 mt-5 mb-1">
-        <div class="mb-2 flex-center">
-
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Pinterest-->
-          <a class="pin-ic">
-            <i class="fa fa-pinterest fa-lg white-text fa-2x"> </i>
-          </a>
-        </div>
-      </div>
-      <!-- Grid column -->
-
+<div class="footer-component footer-dark cyan darken-5 bg-dark text-light">
+  <div class="row text-center">
+    <div class="col-sm-12">
+      <div class="container">
+        <a class="footer-icons">
+          <i class="fa fa-facebook fa-lg white-text m-4 fa-2x"></i>
+        </a>
+        <!-- Twitter -->
+        <a class="footer-icons">
+          <i class="fa fa-twitter fa-lg white-text m-4 fa-2x"></i>
+        </a>
+        <!-- Google +-->
+        <a class="footer-icons">
+          <i class="fa fa-google-plus fa-lg white-text m-4 fa-2x"></i>
+        </a>
+        <!--Linkedin -->
+        <a class="footer-icons">
+          <i class="fa fa-linkedin fa-lg white-text m-4 fa-2x"></i>
+        </a>
+        <!--Instagram-->
+        <a class="footer-icons">
+          <i class="fa fa-instagram fa-lg white-text m-4 fa-2x"></i>
+        </a>
+        <!--Pinterest-->
+        <a class="footer-icons">
+          <i class="fa fa-pinterest fa-lg white-text m-4 fa-2x"></i>
+        </a>
     </div>
-    <!-- Grid row-->
-
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-1">© 2018 Copyright:
-      <a href="#"> GoDeliver.com</a>
     </div>
-    <!-- Copyright -->
-
-  </footer>
-  <!-- Footer -->
-</body>
+  </div>
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-1">© 2018 Copyright:
+    <a href="#"> GoDeliver.com</a>
+  </div>
+  <!-- Copyright -->
+</div>
