--- a/GoDeliverFrontEnd/src/app/login/login.component.css
+++ b/GoDeliverFrontEnd/src/app/login/login.component.css
@@ -1,40 +1,44 @@
 /*css for login page*/
+.component-body{
+  height: 100vh;
+}
 
-.background {
-  background-size: cover;
-  background-image : url("../../assets/1234.gif");
-  
+.container-fluid{
+  text-align: center;
+  margin: 0 auto;
+  height: 100vh;
+  background-size: contain;
+  background: repeat;
+  background-image : url("../../assets/wallpaper.gif");
 }
 
 .example-form {
   position: relative;
   min-width: 100px;
-  max-width: 200px;
+  max-width: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
+
 .loginButton {
-  margin-top: 2%;
-  left: 25%;
-  background-color:grey;
+  margin: 2% 0% 5% 0%;
+  background-color:rgb(196, 17, 17);
+  color: white;
+  font-weight: 900;
+  letter-spacing: 2px;
 }
 
 .register {
   position: relative;
-  top: 2%;
-  padding-left: 17%
-  
+  color: blue;
 }
 mat-form-field{
-  padding-right: 10px;
-  width: 300px;
+  width: 90%;
 }
 mat-card{
-  margin-top: 20%; 
-  margin-bottom: 110%;
-  width: 350px;
-  
-
+  top: 40%;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
