--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -1,52 +1,35 @@
 <!-- Login Page authentication with username and password -->
-<div class="conatiner">
+<div class="component-body">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-6 col-md-offset-3">
 
-  <body class="background">
-    <div class="page-bg"></div>
-      <div class="row mb-4 ml-1">
-  
-        <div class="col-sm-12">
-          <!--form class for username and password  using Material-->
-         
-          <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
-            <!-- <mat-form-field class="">
-              <input matInput type="text" placeholder="Email" formControlName="userEmail" name="userEmail" required [pattern]="emailPattern"> -->
-              <!--error handling for Email-->
-              <!-- <div *ngIf="userEmail.dirty && userEmail.errors" class="error">
-                <div *ngIf="userEmail.errors.required" class="validation_message">
-                  User Email required.
-                </div>
-              </div>
-              <mat-hint>eg:abc@gmail.com</mat-hint>
-            </mat-form-field> -->
-            <mat-card>
+        <!--form class for username and password  using Material-->
+        <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
+          <mat-card>
+
             <mat-form-field>
               <input matInput placeholder="Enter your email" [formControl]="userEmail" name="userEmail" required>
               <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
             </mat-form-field>
 
             <mat-form-field class="example-full-width" style="margin-top:18px">
-              <input matInput type="password" placeholder="password" [formControl]="userPassword" name="userPassword" required minlength="8">
-              <!--error handling for password-->
-              <!-- <div *ngIf="userPassword.dirty && userPassword.errors" class="error">
-                <div *ngIf="userPassword.errors.required" class="validation_message">
-                  Password required.
-                </div>
-              </div> -->
+              <input matInput type="password" placeholder="Password" [formControl]="userPassword" name="userPassword" required minlength="8">
               <mat-error *ngIf="email.invalid">{{getErrorMessage2()}}</mat-error>
             </mat-form-field>
 
-            <button class="loginButton" mat-raised-button style="color:white">Login</button>
-            <br><br>
+            <button class="loginButton" mat-raised-button>Login</button>
+            <br>
             <div *ngIf="error" class="alert alert-danger">{{error}}</div>
             <!-- Routing to signup page when the user clicks on the Signup button-->
-            <a class="register" [routerLink]="['/register']"  style="color:rgb(12, 5, 5)">New to GoDeliver? Sign Up!
+            <a class="register" [routerLink]="['/register']">New to GoDeliver? Sign Up!
             </a>
+
           </mat-card>
-          </form>
-     
-          <!--  end of form class-->
+        </form>
+
+        <!--  end of form class-->
       </div>
     </div>
-  </body>
+  </div>
 </div>
